# kyouth_project

./: .env.example  .gitignore  Claude1.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  app.py  career_graph.py  db.py  skills.txt  tasks.py
data/: external_sources.json  jobs.json  jobs_snapshot.json  rag_cache.json  skill_intelligence.json  skill_learning_times.json  skill_taxonomy.json
frontend/: Dockerfile  nginx.conf
frontend/static/: index.html
scripts/: analyze_skill_intelligence.py  extract_job_skills_with_gemini.py  fetch_real_jobs.py  precompute_skill_learning_times.py
