[project]
name = "career-navigator"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.0",
    "flask-cors==5.0.0",
    "requests==2.32.3",
    "pdfplumber==0.11.4",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]